--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,6 +27,9 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <p>Past --> Grey </p>
+      <p> Present --> Red </p>
+      <p> Future --> Green</p>
     </header>
     <div class="container-lg px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
@@ -113,6 +116,10 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
+
+      <footer>
+        <p></p>
+      </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
