--- a/Develop/index.html
+++ b/Develop/index.html
@@ -45,7 +45,7 @@
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
       <div id="hour-9" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea class="col-8 col-md-10 description-9" rows="3"></textarea>
+        <textarea id="text-9" class="col-8 col-md-10 description" rows="3"></textarea>
         <button id="save-9" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
