--- a/Develop/index.html
+++ b/Develop/index.html
@@ -54,7 +54,7 @@
       <!-- Example of a a present time block. The "present" class adds a red background color. -->
       <div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-10" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save-10" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -63,7 +63,7 @@
       <!-- Example of a future time block. The "future" class adds a green background color. -->
       <div id="hour-11" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-11" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save-11" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -71,7 +71,7 @@
 
       <div id="hour-12" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-12" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save-12" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -79,7 +79,7 @@
 
       <div id="hour-13" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-13" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save-13" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -87,7 +87,7 @@
 
       <div id="hour-14" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-14" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save-14" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -95,7 +95,7 @@
 
       <div id="hour-15" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-15" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save-15" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -103,7 +103,7 @@
 
       <div id="hour-16" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-16" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save-16" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -111,7 +111,7 @@
 
       <div id="hour-17" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-17" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save-17" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
