--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -27,9 +27,12 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
-      <p>Past --> Grey </p>
-      <p> Present --> Red </p>
-      <p> Future --> Green</p>
+      <div class="key">
+        <h4>Key:</h4>
+        <p>Past --> Grey </p>
+        <p> Present --> Red </p>
+        <p> Future --> Green</p>
+      </div>
     </header>
     <div class="container-lg px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
@@ -128,6 +131,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="./Develop/script.js"></script>
   </body>
 </html>
